<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for AMR — teleop and sensors</description>
  <maintainer email="itssurabaya@todo.todo">Muhammad Al Azhar Faradis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>amr_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>